syntax = "proto3";

package vou.proto.auth;

option go_package = "VOU-Server/proto/gen";
import "google/protobuf/timestamp.proto";

service AuthService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {}
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse) {}
}

// CreateUser

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  string photo = 6;
}

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateUserResponse {
  User user = 1;
}

// LoginUser

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string session_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp access_token_expires_at = 5;
  google.protobuf.Timestamp refresh_token_expires_at = 6;
}
// Authorize

message AuthorizeRequest { string token = 1; }

message AuthorizeResponse {
  int64 status = 1;
  string error = 2;
  int64 username = 3;
}